--- a/demo/frontend/todo-app/package.json
+++ b/demo/frontend/todo-app/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "react-bootstrap": "^0.32.1"
   },
   "scripts": {
     "start": "react-scripts start",
